--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "normalize.css": "^8.0.1",
     "vant": "^4.9.2",
     "vue": "^3.4.31",
     "vue-router": "^4.4.0"
@@ -20,6 +21,7 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
     "postcss-pxtorem": "^6.1.0",
+    "sass": "^1.77.8",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.18.0",
     "unplugin-vue-components": "^0.27.3",
